--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,4 @@
-###############################################################################
-#                          Generated on phpdocker.io                          #
-###############################################################################
-version: '3.1'
+version: '3.9'
 services:
     memcached:
         image: 'memcached:alpine'
@@ -9,25 +6,12 @@ services:
     redis:
         image: 'redis:alpine'
 
-    mysql:
-        image: 'mysql:8.0'
-        working_dir: /application
-        volumes:
-            - '.:/application'
-        environment:
-            - MYSQL_ROOT_PASSWORD=testedoteste
-            - MYSQL_DATABASE=db_name
-            - MYSQL_PASSWORD=testedoteste
-            - MYSQL_ALLOW_EMPTY_PASSWORD=testedoteste
-        ports:
-            - '8002:3306'
-
     webserver:
-        image: 'nginx:alpine'
+        image: nginx
         working_dir: /application
         volumes:
             - '.:/application'
-            - './phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
+            - './nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
         ports:
             - '8080:80'
 
