--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,5 @@
 version: '3.9'
 services:
-    memcached:
-        image: 'memcached:alpine'
-
-    redis:
-        image: 'redis:alpine'
-
     webserver:
         image: nginx
         working_dir: /application
@@ -21,3 +15,10 @@ services:
         volumes:
             - '.:/application'
             - './phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/8.2/fpm/conf.d/99-overrides.ini'
+    db:
+        image: mysql:latest
+        env_file: './env/db.env'
+        ports:
+            - '3306:3306'
+        volumes:
+            - .:/etc/mysql/conf.d/**
